# PhotoMatchingAlgorithms

./: README.md
src/aphis/aphis/: aphis.cpp  aphis.h  aphis_impl.cpp  compareAllPatterns.cpp
src/i3s/: CMakeLists.txt
src/i3s/i3s/: affine.cpp  affine.h  compare.cpp  compare.hpp  compareAllFingers.cpp  comparedll.cpp  element.cpp  element.hpp  fingerprint.cpp  fingerprint.hpp  i3s.cpp  i3s.h  point2D.hpp
src/i3s/i3s/surf/: I3SSurf.cpp  Line2D.cpp  Line2D.hpp  affine.cpp  dllmain.cpp  registry.cpp  segment.cpp  stdafx.cpp  svm.cpp
src/wildid/WildIDBatchCompare/: .classpath  .project
src/wildid/WildIDBatchCompare/src/main/: WildIDBatchCompare.java
